# genuary_2025

./: .gitignore  README.md  pyproject.toml
src/: day01.py  day02.py  day03.py  day03_bagley.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day26.py  day27.py  day28.py  day29.py  day3.py  day30.py  day31.py  day3_bagley.py  day4.py  day5.py  day6.py  day7.py  (+2 more)
