[project]
name = "genuary-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.0",
    "flax>=0.10.2",
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "jax>=0.4.38",
    "matplotlib>=3.10.0",
    "numpy<2",
    "optax>=0.2.4",
    "py2bit",
    "pyranges>=0.1.2",
    "requests>=2.32.3",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.14.1",
    "shapely>=2.0.6",
    "sty>=1.0.6",
    "tqdm>=4.67.1",
    "transformers>=4.48.0",
]

[tool.uv.sources]
py2bit = { git = "https://github.com/dpryan79/py2bit" }
